# Rust_Q_Bot

./: Cargo.toml  README.md  data.json
.github/workflows/: build-and-publish.yml  rust.yml
src/: bot.rs  event.rs  lib.rs  main.rs  postrequest.rs
src/bot/: mod.rs
src/event/: message.rs  meta_event.rs  mod.rs  notice.rs  request.rs
src/postrequest/: mod.rs
